# finance-statistics

./: .gitignore  README.md  analysis.py  pyproject.toml
data/manual/: nfra_bank_indicators.csv  pbc_credit_summary.csv
outputs/tables/: change_lagged_regression_coefficients.csv  change_lagged_regression_fit.csv  change_lagged_regression_fitted.csv  correlations.csv  credit_metrics.csv  descriptive_stats.csv  granger_tests.csv  lagged_correlations.csv  lagged_regression_coefficients.csv  lagged_regression_fit.csv  lagged_regression_fitted.csv  nfra_indicators.csv  regression_coefficients.csv  regression_fit.csv  risk_pressure_weights.csv  risk_regime_summary.csv  stationarity_tests.csv  univariate_lagged_regressions.csv  var_coefficients.csv  var_fit.csv  var_irf.csv
src/cn_bank_stats/: __init__.py  cli.py  data_sources.py  metrics.py  modeling.py  plots.py
tests/: test_metrics.py
